# GaussQuad

./: .gitignore  CMakeLists.txt  README.md
gauss_integrator/: Makefile  main.cpp
gauss_solver/: Makefile  gauss.cpp  gauss.h  main.cpp
